# aoc

./: .gitignore  README.md
.github/workflows/: publish.yml  publish.yml.bak
2020/: .Rhistory  christmas_tree.r
2020/day_01/: code.R
2020/day_02/: code.R
2020/day_03/: notebook.Rmd  notebook.html  notebook.nb.html
2020/day_04/: notebook.Rmd  notebook.nb.html
2020/day_05/: notebook.Rmd  notebook.nb.html
2020/day_06/: notebook.Rmd  notebook.nb.html
2020/day_07/: notebook.Rmd  notebook.nb.html
2020/day_08/: notebook.nb.html
2020/day_09/: notebook.Rmd  notebook.nb.html
2020/day_10/: notebook.Rmd  notebook.nb.html
2020/day_11/: notebook.Rmd  notebook.nb.html
2020/day_12/: notebook.Rmd  notebook.nb.html
2020/day_13/: notebook.Rmd  notebook.nb.html
2020/day_17/: notebook.Rmd  notebook.html  notebook.ipynb  notebook.nb.html
2022/: .gitignore  _publish.yml  answers.html  answers.qmd  requirements.txt
2022/helper_scripts/: 05_process_inputs.sh
2022/inputs/: 05_input_stacks.txt  05_test_case.txt  05_test_case_alt.txt  (+2 more)
2023/: Day01.ipynb  Day02.ipynb  Day03.ipynb  Day04.ipynb  Day05.ipynb  Day06.ipynb  Day07.ipynb  Day08.ipynb  Day09.ipynb  Day1.ipynb  TODO.md
2024/: Day01.html  Day01.ipynb  Day01.sh  Day02.html  Day02.ipynb  Day03.html  Day03.ipynb  Day03.sh  Day04.html  Day04.ipynb
2025/: README.md  day_01.ipynb  day_02.ipynb  day_02_cleaner.ipynb  day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb  day_07.ipynb  day_08.ipynb  day_09.ipynb  day_10.ipynb  day_11.ipynb  day_12.ipynb  helper.py  pyproject.toml
2025/misc/: custom.css
(+153 files in other folders)
