[project]
name = "AoC_2025"
version = "0.1.0"
description = "Minimal environment for Advent of Code 2025 solutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloredlogs>=15.0.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
]
